--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "export": "next export"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "autoprefixer": "^9.8.0",
     "next": "9.3.5",
     "react": "16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "16.13.1",
     "react-feather": "^2.0.8",
     "recoil": "0.0.7",
     "schema-utils": "^2.6.6",
-    "@fullhuman/postcss-purgecss": "^2.2.0",
-    "autoprefixer": "^9.8.0",
     "tailwindcss": "^1.4.6"
   }
 }
